--- a/src/features/main/sections/hero/main-hero.module.css
+++ b/src/features/main/sections/hero/main-hero.module.css
@@ -60,6 +60,7 @@
   left: 0;
   right: 0;
   bottom: 2.5rem;
+  z-index: 6;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -91,6 +92,8 @@
   border-radius: 62.5rem;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background: #fff;
+  position: relative;
+  z-index: 1;
 }
 
 .cluster {
